syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "BaseProjectServiceProto";
option objc_class_prefix = "RTG";

package com.elca.vn.service;

import "pim_project.proto";

service BaseProjectService {

  //Insert
  rpc insertNewProject(com.elca.vn.model.PimProject) returns (com.elca.vn.model.PimProject) {}

  //Update
  rpc updateProject(com.elca.vn.model.PimProject) returns (com.elca.vn.model.PimProject) {}
}